--- a/application.yml
+++ b/application.yml
@@ -6,3 +6,18 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
     hostname: localhost
+spring:
+  datasource:
+    url: jdbc:h2:tcp://localhost/C:/Users/ssatyana/projects/h2dbstore;DB_CLOSE_ON_EXIT=FALSE 
+    driverClassName: org.h2.Driver
+    username: sa
+    password:
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+  h2:
+    console:
+      enabled: true
+      path: /h2
